# knee_segmentation

./: README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/knee_segmentation/: __init__.py  cli.py  converter.py  dicom_reader.py  label_combiner.py  mask_processor.py  nnunet_formatter.py  validator.py
src/knee_segmentation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py
